# newsletter

./: .gitignore  Cargo.toml
scripts/: init_db.sh
src/: configurations.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
